# qhulltest

./: CMakeLists.txt  README.md  qhull.cpp
